# fc_thesis

./: INSTALL_DEPENDENCIES.sh  README.md
my_navigation/: README.md
my_navigation/dynobst_layer/: CMakeLists.txt  README.md  package.xml  plugin_setup.xml
my_navigation/getting_started/: ROBOT_NAV_PARAMETERS.md  local_planner_params.yaml  robot_nav.launch  rviz_config.rviz
my_navigation/goal_publisher/: CMakeLists.txt  README.md  package.xml
my_navigation/localization/: CMakeLists.txt  package.xml
my_navigation/my_dwb_critics/: CMakeLists.txt  README.md  package.xml  set_plugins.xml
my_navigation/my_dwb_critics/include/my_dwb_critics/: adapted_vo.h  dynamic_avoidance.h  grid_map.h  inertia.h  orient_to_goal.h  path_followance.h  static_obstacle.h  vonh.h
my_navigation/my_dwb_critics/src/: adapted_vo.cpp  dynamic_avoidance.cpp  grid_map.cpp  inertia.cpp  orient_to_goal.cpp  path_followance.cpp  static_obstacle.cpp  vonh.cpp
my_navigation/my_dwb_plugins/: CMakeLists.txt  package.xml  set_plugins.xml
my_navigation/nav_utils/: CMakeLists.txt  README.md  package.xml  requirements.txt
rover/: README.md
rover/launchers/: CMakeLists.txt  README.md  off_slam_vizual.rviz  package.xml
rover/rover_controller/: CMakeLists.txt  package.xml
rover/rover_nav/: CMakeLists.txt  package.xml
rover/rover_tf_publisher/: CMakeLists.txt  package.xml
sensors/: CMakeLists.txt  README.md  package.xml
sensors/include/: basic_2Dscan.hpp  obstacle_filter.h  pcl_filter.h
sensors/launch/: laserscan_demo.launch  obstacle_tracker.launch  offline_obst_tracker.launch  realsense_camera.launch
sensors/msg/: LaserScanWithConfidence.msg
sensors/rviz/: offline_obstacles.rviz  (+1 more)
simulation/: READ_ME.md  package.xml
(+102 files in other folders)
